# RTPCC

./: .gitignore  README.md  _check_status.py  pyproject.toml  test_api.py
app/: __init__.py  main.py  models.py  state.py
app/routers/: __init__.py  alerts.py  routing.py  simulate.py  venue.py
config/: zones_test.json  zones_video1.json
dashboard/: app.js  dashboard.html  index.html  styles.css
scripts/: calibrate_zones.py  csrnet_infer.py  fetch_test_image.py  simulate.py  step1_demo.py  test_zones.py  vision_feed.py  zones.py
src/rtpcc/: __init__.py  api.py  risk.py  service.py  venue.py
src/rtpcc.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
